--- a/post.hbs
+++ b/post.hbs
@@ -24,16 +24,16 @@
                 <h1 class="post-title"><a href="{{url}}">{{title}}</a></h1>
                 <section class="post-meta">
                     <span class="post-meta-item">
-                        <i class="fa fa-user"></i>
+                        <i class="iconfont icon-user"></i>
                         {{author}}
                     </span>
                     <span class="post-meta-item">
-                        <i class="fa fa-clock-o"></i>
+                        <i class="iconfont icon-time"></i>
                         <time class="post-date" datetime="{{date format='YYYY-MM-DD'}}">{{date timeago="ture"}}</time>
                         <time class="post-date" datetime="{{date format='YYYY-MM-DD'}}">({{date format="YYYY-MM-DD"}})</time>
                     </span>
                     <span class="post-meta-item post-meta-tags">
-                        <i class="fa fa-tag"></i>
+                        <i class="iconfont icon-biaoqian"></i>
                         {{tags}}
                     </span>
                     <span class="post-meta-item pull-right">
