--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -180,65 +180,65 @@ table {
 
 /* Import the font file with the icons in it */
 
-@font-face {
-    font-family: "casper-icons";
-    src: url("../fonts/casper-icons.eot?v=1");
-    src: url("../fonts/casper-icons.eot?v=1#iefix") format("embedded-opentype"), url("../fonts/casper-icons.woff?v=1") format("woff"), url("../fonts/casper-icons.ttf?v=1") format("truetype"), url("../fonts/casper-icons.svg?v=1#icons") format("svg");
-    font-weight: normal;
-    font-style: normal;
-}
+/*@font-face {*/
+    /*font-family: "casper-icons";*/
+    /*src: url("../fonts/casper-icons.eot?v=1");*/
+    /*src: url("../fonts/casper-icons.eot?v=1#iefix") format("embedded-opentype"), url("../fonts/casper-icons.woff?v=1") format("woff"), url("../fonts/casper-icons.ttf?v=1") format("truetype"), url("../fonts/casper-icons.svg?v=1#icons") format("svg");*/
+    /*font-weight: normal;*/
+    /*font-style: normal;*/
+/*}*/
 
-/* Apply these base styles to all icons */
+/*!* Apply these base styles to all icons *!*/
 
-[class^="icon-"]:before, [class*=" icon-"]:before {
-    font-family: "casper-icons", "Microsoft Yahei", "Monaco", sans-serif;
-    speak: none;
-    font-style: normal;
-    font-weight: normal;
-    font-variant: normal;
-    text-transform: none;
-    line-height: 1;
-    text-decoration: none !important;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-}
+/*[class^="icon-"]:before, [class*=" icon-"]:before {*/
+    /*font-family: "casper-icons", "Microsoft Yahei", "Monaco", sans-serif;*/
+    /*speak: none;*/
+    /*font-style: normal;*/
+    /*font-weight: normal;*/
+    /*font-variant: normal;*/
+    /*text-transform: none;*/
+    /*line-height: 1;*/
+    /*text-decoration: none !important;*/
+    /*-webkit-font-smoothing: antialiased;*/
+    /*-moz-osx-font-smoothing: grayscale;*/
+/*}*/
 
 /* Each icon is created by inserting the correct character into the
    content of the :before pseudo element. Like a boss. */
 
-.icon-ghost:before {
-    content: "\f600";
-}
-.icon-feed:before {
-    content: "\f601";
-}
-.icon-twitter:before {
-    content: "\f602";
-    font-size: 1.1em;
-}
-.icon-google-plus:before {
-    content: "\f603";
-}
-.icon-facebook:before {
-    content: "\f604";
-}
-.icon-arrow-left:before {
-    content: "\f605";
-}
-.icon-stats:before {
-    content: "\f606";
-}
-.icon-location:before {
-    content: "\f607";
-    margin-left: -3px;
-    /* Tracking fix */
-}
-.icon-link:before {
-    content: "\f608";
-}
-.icon-menu:before {
-    content: "\f609";
-}
+/*.icon-ghost:before {*/
+    /*content: "\f600";*/
+/*}*/
+/*.icon-feed:before {*/
+    /*content: "\f601";*/
+/*}*/
+/*.icon-twitter:before {*/
+    /*content: "\f602";*/
+    /*font-size: 1.1em;*/
+/*}*/
+/*.icon-google-plus:before {*/
+    /*content: "\f603";*/
+/*}*/
+/*.icon-facebook:before {*/
+    /*content: "\f604";*/
+/*}*/
+/*.icon-arrow-left:before {*/
+    /*content: "\f605";*/
+/*}*/
+/*.icon-stats:before {*/
+    /*content: "\f606";*/
+/*}*/
+/*.icon-location:before {*/
+    /*content: "\f607";*/
+    /*margin-left: -3px;*/
+    /*!* Tracking fix *!*/
+/*}*/
+/*.icon-link:before {*/
+    /*content: "\f608";*/
+/*}*/
+/*.icon-menu:before {*/
+    /*content: "\f609";*/
+/*}*/
 
 /*
     IMPORTANT: When making any changes to the icon font, be sure to increment
@@ -704,7 +704,7 @@ body.nav-opened .site-wrapper {
     display: block;
     margin: 1.75rem 0 0 0;
     font-family: "Microsoft Yahei", "Monaco", sans-serif;
-    font-size: 1.5rem;
+    /*font-size: 1.6rem;*/
     line-height: 2.2rem;
     color: #9EABB3;
 }
@@ -1762,27 +1762,22 @@ body.nav-opened .site-wrapper {
     display: inline-block;
     padding: 10px;
     margin: 5px;
+    margin-left: 18px;
+
+}
+.social > li  img{
+    width: 17px;
+    height: 17px;
+    margin-bottom: 3px;
+}
+.social > li  i{
+    font-size: 20px;
 }
 .social > li > a {
     color: #8F8F8F;
 }
-.social .social-weibo:hover {
-    color: #D9534F;
-}
-.social .social-github:hover {
-    color: #4A4A4A;
-}
-.social .social-music:hover {
-    color: #FF434F;
-}
-.social .social-mail:hover {
-    color: #428BCA;
-}
-.social .social-rss:hover {
-    color: #FF7500;
-}
-.fa-xlg {
-    font-size: 1.6em !important;
+.social a:hover {
+    text-decoration: none;
 }
 .navigation.site-stat {
     padding: 0px 25px;
