--- a/default.hbs
+++ b/default.hbs
@@ -13,12 +13,10 @@
 
     <link rel="shortcut icon" href="{{asset "favicon.ico"}}">{{! Styles'n'Scripts }}
     <link rel="stylesheet" type="text/css" href="{{asset "css/screen.css"}}" />
-    <!-- <link rel="stylesheet" type="text/css" href="//fonts.useso.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400" /> -->
-    <link rel="stylesheet" type="text/css" href="{{asset "plugins/font-awesome-4.5.0/css/font-awesome.min.css"}}" />
+    <link rel="stylesheet" type="text/css" href="{{asset "css/iconfont/iconfont.css"}}" />
     <link rel="stylesheet" type="text/css" href="{{asset "plugins/bootstrap-3.3.5/css/bootstrap.min.css"}}" />
-    <link rel="stylesheet" type="text/css" href="{{asset "plugins/highlight-9.1.0/styles/monokai-sublime.css"}}" />
     <link rel="stylesheet" type="text/css" href="{{asset "plugins/anijs-0.9.3/anicollection.min.css"}}" />
-    <link rel="stylesheet" type="text/css" href="{{asset "plugins/fancybox-2.1.5/jquery.fancybox.css"}}" />{{! Ghost outputs important style and meta data with this tag }}
+    <link rel="stylesheet" type="text/css" href="{{asset "css/ImageZoom.css"}}" />
     {{ghost_head}}
 </head>
 
@@ -40,7 +38,7 @@
 
     <div id="backTop" class="backTop">
         <button class="btn btn-inverse">
-            <i class="fa fa-chevron-up"></i>
+            <i class="iconfont icon-up"></i>
         </button>
     </div>
 
@@ -51,7 +49,6 @@
 
     <script type="text/javascript" src="{{asset "js/jquery.fitvids.js"}}"></script>
     {{! The main JavaScript file for Kaldorei }}
-    <script type="text/javascript" src="{{asset "js/index.js"}}"></script>
     <script type="text/javascript" src="{{asset "plugins/bootstrap-3.3.5/js/bootstrap.min.js"}}"></script>
     <script type="text/javascript" src="{{asset "plugins/jquery-toc-0.3.5/jquery.toc.js"}}"></script>
     <script type="text/javascript" src="{{asset "plugins/velocity-1.2.3/velocity.min.js"}}"></script>
@@ -59,7 +56,8 @@
     <script type="text/javascript" src="{{asset "plugins/anijs-0.9.3/anijs-min.js"}}"></script>
     <script type="text/javascript" src="{{asset "plugins/anijs-0.9.3/anijs-helper-scrollreveal-min.js"}}"></script>
     <script type="text/javascript" src="{{asset "plugins/github-repo-jquery-widget/jquery.githubRepoWidget.min.js"}}"></script>
-    <script type="text/javascript" src="{{asset "plugins/fancybox-2.1.5/jquery.fancybox.pack.js"}}"></script>
+    <script type="text/javascript" src="{{asset "js/ImageZoom.js"}}"></script>
+    <script type="text/javascript" src="{{asset "js/index.js"}}"></script>
 </body>
 
 </html>
