--- a/partials/friendLink.hbs
+++ b/partials/friendLink.hbs
@@ -2,8 +2,8 @@
 <div class="widget widget-tag-cloud">
     <div class="widget-title">
         <div class="widget-title-meta">
-            <i class="fa fa-tags"></i>&nbsp;
-            <span class="title-meta-word">友情链接</span>
+            <i class="iconfont icon-biaoqian"></i>&nbsp;
+            <span class="title-meta-word">我的小伙伴</span>
         </div>
     </div>
     <div class="tag-cloud-content">
