--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -27,20 +27,20 @@
             <!-- {{#if author.image}}<img class="author-thumb" src="{{author.image}}" alt="{{author.name}}" nopin="nopin" />{{/if}} -->
             <!-- {{tags prefix=" on "}} -->
             <span class="post-meta-item post-meta-author">
-                <i class="fa fa-user"></i>
+                <i class="iconfont icon-user1"></i>
                 {{author}}
             </span>
             <span class="post-meta-item post-meta-date">
-                <i class="fa fa-clock-o"></i>
+                <i class="iconfont icon-time"></i>
                 <time class="post-date" datetime="{{date format='YYYY-MM-DD'}}">{{date timeago="ture"}}</time>
                 <time class="post-date" datetime="{{date format='YYYY-MM-DD'}}">({{date format="YYYY-MM-DD"}})</time>
             </span>
             <span class="post-meta-item post-meta-tags">
-                <i class="fa fa-tag"></i>
+                <i class="iconfont icon-biaoqian"></i>
                 {{tags}}
             </span>
             <span class="post-meta-item pull-right">
-                <a class="read-more" href="{{url}}">阅读全文 <i class="fa fa-angle-double-right"></i></a>
+                <a class="read-more" href="{{url}}">阅读全文 <i class="iconfont icon-more"></i></a>
             </span>
         </footer>
     </article>
