--- a/partials/toc.hbs
+++ b/partials/toc.hbs
@@ -2,7 +2,7 @@
 <div class="widget widget-toc">
     <div class="widget-title">
         <div class="widget-title-meta">
-            <i class="fa fa-list-ul"></i>&nbsp;
+            <i class="iconfont icon-catalogue"></i>&nbsp;
             <span class="title-meta-word">文章目录</span>
         </div>
     </div>
