--- a/default.hbs
+++ b/default.hbs
@@ -12,11 +12,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="shortcut icon" href="{{asset "favicon.ico"}}">{{! Styles'n'Scripts }}
-    <link rel="stylesheet" type="text/css" href="{{asset "css/screen.css"}}" />
+    <link rel="stylesheet" type="text/css" href="{{asset "css/animate.min.css"}}" />
     <link rel="stylesheet" type="text/css" href="{{asset "css/iconfont/iconfont.css"}}" />
+    <link rel="stylesheet" type="text/css" href="{{asset "css/screen.css"}}" />
     <link rel="stylesheet" type="text/css" href="{{asset "plugins/bootstrap-3.3.5/css/bootstrap.min.css"}}" />
     <link rel="stylesheet" type="text/css" href="{{asset "plugins/anijs-0.9.3/anicollection.min.css"}}" />
     <link rel="stylesheet" type="text/css" href="{{asset "css/ImageZoom.css"}}" />
+
     {{ghost_head}}
 </head>
 
