--- a/assets/css/ImageZoom.css
+++ b/assets/css/ImageZoom.css
@@ -40,10 +40,8 @@
 }
 .ImageZoom-image-box{
     background: transparent;
-    height: 200px;
-    width: 200px;
-    top: calc(50% - 100px);
-    left: calc(50% - 100px);
+    /*top: calc(50% - 100px);*/
+    /*left: calc(50% - 100px);*/
     position: fixed;
 }
 
