增加amp的模板内容和post.hbs 一样,不需要移动加速 修改post内的一处图片自适应

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -2095,7 +2095,7 @@ body.nav-opened .site-wrapper {
     }
     .post-content img {
         padding: 0;
-        width: calc(100% + 32px);
+        /*width: calc(100% + 32px);*/
         /* expand with to image + margins */
         min-width: 0;
         max-width: 90%;
