--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -2465,3 +2465,12 @@ code.has-numbering {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
     background-color: #15976e;
 }
+
+
+/**
+    pactch bootstrap
+ */
+blockquote{
+    overflow: hidden;
+}
+
