add github-markdown-css update 增加ImageZoom.js 的注释

--- a/default.hbs
+++ b/default.hbs
@@ -18,7 +18,8 @@
     <link rel="stylesheet" type="text/css" href="{{asset "plugins/bootstrap-3.3.5/css/bootstrap.min.css"}}" />
     <link rel="stylesheet" type="text/css" href="{{asset "plugins/anijs-0.9.3/anicollection.min.css"}}" />
     <link rel="stylesheet" type="text/css" href="{{asset "css/ImageZoom.css"}}" />
-
+    <link href="https://cdn.bootcss.com/github-markdown-css/2.6.0/github-markdown.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="{{asset "css/me.css"}}" />
     {{ghost_head}}
 </head>
 
