--- a/post.hbs
+++ b/post.hbs
@@ -42,7 +42,7 @@
                 </section>
             </header>
 
-            <section class="post-content">
+            <section class="post-content markdown-body">
                 {{content}}
             </section>
             {{> "copyright"}}
