--- a/page.hbs
+++ b/page.hbs
@@ -25,7 +25,7 @@
               <h1 class="post-title">{{title}}</h1>
           </header>
 
-          <section class="post-content">
+          <section class="post-content markdown-body">
               {{content}}
           </section>
 
