备案信息跳转

--- a/default.hbs
+++ b/default.hbs
@@ -33,7 +33,7 @@
         <footer class="site-footer clearfix">
             <div class="footer-meta container">
                 <section class="copyright"><a href="{{@blog.url}}">{{@blog.title}}</a> &copy; {{date format="YYYY"}}
-                  <img src="http://www.beian.gov.cn/img/ghs.png" alt=""> 粤ICP备16109857号-1</section>
+                  <a href="http://www.miibeian.gov.cn/"><img src="http://www.beian.gov.cn/img/ghs.png" alt=""> 粤ICP备16109857号-1</section></a>
                 <section class="poweredby">Proudly published with <a href="https://ghost.org">Ghost</a>, Theme <a href="https://github.com/xiaoluoboding/kaldorei">Kaldorei</a></section>
             </div>
         </footer>
